fix: improve menu styling and layout, align labels in memory and GPU menus

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -68,7 +68,7 @@
 }
 
 .astra-monitor-menu-button-box {
-    padding: 1em 0 0 0;
+    padding: 0 0 0 0;
     spacing: 2em;
 }
 
